### 20260109 - 마이페이지 ###
1. 마이페이지 - pageFlag 적용
2. 이번달배송금액/이번달 장려금/ 오늘 주문총액/ 오늘 취소,환불금액/ 사용 가능 포인트

--- a/index.html
+++ b/index.html
@@ -5139,9 +5139,13 @@
                                                     </svg> MD 추천
                                                 </div>
                                                 <div class="delivery-tags">
-                                                    <span class="tag tag-ambient"><img
-                                                            src="/assets/images/icons/icon-thermometer.svg"
-                                                            alt="ambient">
+                                                    <span class="tag tag-ambient"><svg class="icon-thermometer"
+                                                            width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                                            xmlns="http://www.w3.org/2000/svg">
+                                                            <path
+                                                                d="M11.3077 7.16797V5.16797H9.30768V4.16797H11.3077V2.16797H12.3077V4.16797H14.3077V5.16797H12.3077V7.16797H11.3077ZM5.58784 13.668C4.7584 13.668 4.05134 13.3761 3.46668 12.7923C2.88212 12.2085 2.58984 11.5004 2.58984 10.668C2.58984 10.1603 2.70862 9.69086 2.94618 9.25964C3.18384 8.82841 3.50951 8.4688 3.92318 8.1808V4.0013C3.92318 3.53552 4.08451 3.1413 4.40718 2.81864C4.72973 2.49597 5.12396 2.33464 5.58984 2.33464C6.05562 2.33464 6.44984 2.49597 6.77251 2.81864C7.09507 3.1413 7.25634 3.53552 7.25634 4.0013V8.1808C7.67001 8.4688 7.99462 8.82841 8.23018 9.25964C8.46562 9.69086 8.58545 10.1603 8.58968 10.668C8.58545 11.5004 8.29146 12.2085 7.70768 12.7923C7.1239 13.3761 6.41729 13.668 5.58784 13.668ZM4.92318 6.66797H6.25651V4.0013C6.25651 3.81241 6.19262 3.65408 6.06484 3.5263C5.93707 3.39852 5.77873 3.33464 5.58984 3.33464C5.40096 3.33464 5.24262 3.39852 5.11484 3.5263C4.98707 3.65408 4.92318 3.81241 4.92318 4.0013V6.66797Z"
+                                                                fill="currentColor" />
+                                                        </svg>
                                                         상온</span>
                                                     <span class="tag tag-ambient tag-outline">TC</span>
                                                     <span class="tag tag-green">소비기한 해당 없음</span>
