### 202601-09 Second Commit ### 1. 모바일 검색결과 페이지

--- a/index.html
+++ b/index.html
@@ -340,16 +340,16 @@
                                 </svg>
                             </button>
                             <button class="btn-icon">
-                                <svg class="icon-cart" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                <svg class="icon-cart" width="20" height="20" viewBox="0 0 20 20" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
-                                    <g clip-path="url(#clip0_687_196)">
+                                    <g clip-path="url(#clip0_29_2955)">
                                         <path
-                                            d="M15.55 13C16.3 13 16.96 12.59 17.3 11.97L20.88 5.48C21.25 4.82 20.77 4 20.01 4H5.21L4.27 2H1V4H3L6.6 11.59L5.25 14.03C4.52 15.37 5.48 17 7 17H19V15H7L8.1 13H15.55ZM6.16 6H18.31L15.55 11H8.53L6.16 6ZM7 18C5.9 18 5.01 18.9 5.01 20C5.01 21.1 5.9 22 7 22C8.1 22 9 21.1 9 20C9 18.9 8.1 18 7 18ZM17 18C15.9 18 15.01 18.9 15.01 20C15.01 21.1 15.9 22 17 22C18.1 22 19 21.1 19 20C19 18.9 18.1 18 17 18Z"
-                                            fill="#222222" />
+                                            d="M9.16536 7.4987H10.832V4.9987H13.332V3.33203H10.832V0.832031H9.16536V3.33203H6.66536V4.9987H9.16536V7.4987ZM5.83203 14.9987C4.91536 14.9987 4.1737 15.7487 4.1737 16.6654C4.1737 17.582 4.91536 18.332 5.83203 18.332C6.7487 18.332 7.4987 17.582 7.4987 16.6654C7.4987 15.7487 6.7487 14.9987 5.83203 14.9987ZM14.1654 14.9987C13.2487 14.9987 12.507 15.7487 12.507 16.6654C12.507 17.582 13.2487 18.332 14.1654 18.332C15.082 18.332 15.832 17.582 15.832 16.6654C15.832 15.7487 15.082 14.9987 14.1654 14.9987ZM6.7487 10.832H12.957C13.582 10.832 14.132 10.4904 14.4154 9.9737L17.632 4.13203L16.182 3.33203L12.957 9.16536H7.10703L3.55703 1.66536H0.832031V3.33203H2.4987L5.4987 9.65703L4.3737 11.6904C3.76536 12.807 4.56536 14.1654 5.83203 14.1654H15.832V12.4987H5.83203L6.7487 10.832Z"
+                                            fill="#222222"></path>
                                     </g>
                                     <defs>
-                                        <clipPath id="clip0_687_196">
-                                            <rect width="24" height="24" fill="white" />
+                                        <clipPath id="clip0_29_2955">
+                                            <rect width="20" height="20" fill="white"></rect>
                                         </clipPath>
                                     </defs>
                                 </svg>
