## 20260112 오전 - 오후 초 ##
1. 모바일 검색화면
2. 로직 변경 - main.js (dropdown) - search.js 로 변경
3. 오류 수정

--- a/pages/search_result.html
+++ b/pages/search_result.html
@@ -227,7 +227,7 @@
             <!-- Tab Content Grid -->
             <div class="product-grid-4 search-result-grid active" id="md-grid-0">
                 <!-- Product 1: Matcha Cream Bread -->
-                <article class="product-card">
+                <article class="product-card" data-price="25200" data-sales="500" data-date="2024-01-01">
                     <a href="#" class="card-thumb">
                         <div class="card-checkbox">
                             <custom-checkbox class="item-check"></custom-checkbox>
@@ -262,8 +262,10 @@
                     <a href="#" class="card-info">
                         <h3 class="product-name">밥누스 말차크림빵 150g</h3>
                         <div class="unit-info">
-                            <span class="strike">2,900</span>
-                            <span class="unit-highlight">2,100</span>
+                            <div class="price-wrap">
+                                <span class="strike">2,900</span>
+                                <span class="unit-highlight">2,100</span>
+                            </div>
                             <span class="unit-desc">입수 12 / BOX</span>
                         </div>
                         <div class="total-price-area">
@@ -322,7 +324,7 @@
                 </article>
 
                 <!-- Product 2: Mozza Cheese Salad -->
-                <article class="product-card">
+                <article class="product-card" data-price="22900" data-sales="800" data-date="2024-01-05">
                     <a href="#" class="card-thumb">
                         <div class="card-checkbox">
                             <custom-checkbox class="item-check"></custom-checkbox>
@@ -357,8 +359,10 @@
                     <a href="#" class="card-info">
                         <h3 class="product-name">모짜치즈과일샐러드</h3>
                         <div class="unit-info">
-                            <span class="strike">2,290</span>
-                            <span class="unit-highlight">1,908</span>
+                            <div class="price-wrap">
+                                <span class="strike">2,290</span>
+                                <span class="unit-highlight">1,908</span>
+                            </div>
                             <span class="unit-desc">입수 12 / BOX</span>
                         </div>
                         <div class="total-price-area">
@@ -416,7 +420,7 @@
                 </article>
 
                 <!-- Product 3: Bibimbap -->
-                <article class="product-card state-dimmed">
+                <article class="product-card state-dimmed" data-price="24900" data-sales="300" data-date="2023-12-20">
                     <a href="#" class="card-thumb">
                         <div class="card-checkbox">
                             <custom-checkbox class="item-check"></custom-checkbox>
@@ -448,8 +452,10 @@
                     <a href="#" class="card-info">
                         <h3 class="product-name">영진 문문문_소불고기비빔밥</h3>
                         <div class="unit-info">
-                            <span class="strike">3,120</span>
-                            <span class="unit-highlight">2,075</span>
+                            <div class="price-wrap">
+                                <span class="strike">3,120</span>
+                                <span class="unit-highlight">2,075</span>
+                            </div>
                             <span class="unit-desc">입수 12 / BOX</span>
                         </div>
                         <div class="total-price-area">
@@ -505,7 +511,7 @@
                 </article>
 
                 <!-- Product 8: Bacon Sandwich -->
-                <article class="product-card state-dimmed">
+                <article class="product-card state-dimmed" data-price="24900" data-sales="100" data-date="2024-01-10">
                     <a href="#" class="card-thumb">
                         <!-- 품절 항목 체크박스 제거 -->
                         <!-- <div class="card-checkbox">
@@ -545,8 +551,10 @@
                     <a href="#" class="card-info">
                         <h3 class="product-name">손종원 뉴욕스타일베이컨샌드위치</h3>
                         <div class="unit-info">
-                            <span class="strike">2,490</span>
-                            <span class="unit-highlight">2,075</span>
+                            <div class="price-wrap">
+                                <span class="strike">2,490</span>
+                                <span class="unit-highlight">2,075</span>
+                            </div>
                             <span class="unit-desc">입수 12 / BOX</span>
                         </div>
                         <div class="total-price-area">
