--- a/mobile/pages/search_result.html
+++ b/mobile/pages/search_result.html
@@ -958,6 +958,9 @@
     <!-- Bottom Nav Placeholder -->
     <div id="mobile-bottom-nav-placeholder"></div>
 
+    <!-- Category Filter Offcanvas Placeholder -->
+    <div id="category-filter-placeholder"></div>
+
     <script src="/assets/js/components/quantity-control.js"></script>
     <script src="/assets/js/main.js"></script>
     <script src="/assets/js/pages/search_result.js"></script>
@@ -974,7 +977,18 @@
                     return response.text();
                 })
                 .then(data => {
-                    document.getElementById(placeholderId).innerHTML = data;
+                    const placeholder = document.getElementById(placeholderId);
+                    placeholder.innerHTML = data;
+
+                    // 실행 가능한 스크립트 추출 및 실행 (Extract and execute scripts)
+                    const scripts = placeholder.querySelectorAll('script');
+                    scripts.forEach(oldScript => {
+                        const newScript = document.createElement('script');
+                        Array.from(oldScript.attributes).forEach(attr => newScript.setAttribute(attr.name, attr.value));
+                        newScript.appendChild(document.createTextNode(oldScript.innerHTML));
+                        oldScript.parentNode.replaceChild(newScript, oldScript);
+                    });
+
                     if (placeholderId === 'mobile-header-placeholder') {
                         document.dispatchEvent(new Event('headerLoaded'));
                     }
@@ -988,6 +1002,7 @@
         loadComponent('/mobile/components/header.component.txt', 'mobile-header-placeholder');
         loadComponent('/mobile/components/footer.component.txt', 'mobile-footer-placeholder');
         loadComponent('/mobile/components/bottom-nav.component.txt', 'mobile-bottom-nav-placeholder');
+        loadComponent('/mobile/components/category-filter.offcanvas.txt', 'category-filter-placeholder');
     </script>
 </body>
 
