### 20260113 - 오전 ### 1. js 코드 정리 2. main.js - zoom 기능 저장 + 트리거 위치 토스트, 모달 % 위치 계산적용 3. search_result.html - 모바일 검색 리스트 세로 정렬 개선.

--- a/mobile/pages/search_result.html
+++ b/mobile/pages/search_result.html
@@ -452,14 +452,10 @@
                         </div>
                     </article>
 
-                    <!-- Product 8: Bacon Sandwich -->
+                    <!-- Product 4: 손종원 뉴욕스타일베이컨샌드위치 -->
                     <article class="product-card state-dimmed" data-price="24900" data-sales="120"
                         data-date="2024-01-05">
                         <a href="#" class="card-thumb">
-                            <!-- 품절 항목 체크박스 제거 -->
-                            <!-- <div class="card-checkbox">
-                            <custom-checkbox class="item-check"></custom-checkbox>
-                        </div> -->
                             <img src="/assets/images/products/md_product_8.png" alt="Product">
                             <div class="status-overlay">
                                 <p>품절</p>
@@ -553,6 +549,7 @@
                         </div>
                     </article>
 
+                    <!-- Product 5: 밥누스 말차크림빵 150g -->
                     <article class="product-card" data-price="25200" data-sales="110" data-date="2024-01-02">
                         <a href="#" class="card-thumb">
                             <div class="card-checkbox">
@@ -641,7 +638,9 @@
                         </div>
                         <div class="bottom-info">
                             <div class="info-row">
-                                <span class="text-highlight"><i class="icon-tag"></i> 오늘만 프로모션 적용</span> &nbsp;·&nbsp;
+                                <span class="text-highlight"><i class="icon-tag"></i> 오늘만 프로모션 적용</span>
+                            </div>
+                            <div class="info-row">
                                 <i class="icon-sparkle"></i> 다다익선 할인
                             </div>
                             <div class="info-row">
@@ -650,7 +649,7 @@
                         </div>
                     </article>
 
-                    <!-- Product 2: Mozza Cheese Salad -->
+                    <!-- Product 6: Mozza Cheese Salad -->
                     <article class="product-card" data-price="22900" data-sales="90" data-date="2024-01-01">
                         <a href="#" class="card-thumb">
                             <div class="card-checkbox">
@@ -738,7 +737,9 @@
                         </div>
                         <div class="bottom-info">
                             <div class="info-row">
-                                <span class="text-highlight"><i class="icon-tag"></i> 오늘만 프로모션 적용</span> &nbsp;·&nbsp;
+                                <span class="text-highlight"><i class="icon-tag"></i> 오늘만 프로모션 적용</span>
+                            </div>
+                            <div class="info-row">
                                 <i class="icon-sparkle"></i> 다다익선 할인
                             </div>
                             <div class="info-row">
@@ -747,7 +748,7 @@
                         </div>
                     </article>
 
-                    <!-- Product 3: Bibimbap -->
+                    <!-- Product 7: Bibimbap -->
                     <article class="product-card state-dimmed" data-price="24900" data-sales="60"
                         data-date="2023-12-28">
                         <a href="#" class="card-thumb">
@@ -980,7 +981,7 @@
                     const placeholder = document.getElementById(placeholderId);
                     placeholder.innerHTML = data;
 
-                    // 실행 가능한 스크립트 추출 및 실행 (Extract and execute scripts)
+                    // 실행 가능한 스크립트 추출 및 실행 
                     const scripts = placeholder.querySelectorAll('script');
                     scripts.forEach(oldScript => {
                         const newScript = document.createElement('script');
