--- a/mobile/pages/app-download.html
+++ b/mobile/pages/app-download.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>앱 다운로드 안내 | 이마트 에브리데이 e클럽</title>
     <!-- CSS link (Relative path to assets) -->
-    <link rel="stylesheet" href="../assets/styles/mobile.css">
+    <link rel="stylesheet" href="../../assets/styles/mobile.css">
 </head>
 
 <body class="mobile-body app-download-page">
