2026-01-13 ### scss 규칙 마이그레이션  @import -> @use ###
1. as * 변경 -> rem, $변수 그대로 사용.
2. zoom 유지 -> 넓이가 아니라 pc 화면 조건으로 변경

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         </div>
                         <div class="slider-card-body">
                             <div class="text-group">
-                                <h3 class="slider-title">ㅁㅁㅁㅁ가벼운 설탕 제로, 안정적 품질 원컵 솔루션</h3>
+                                <h3 class="slider-title">가벼운 설탕 제로, 안정적 품질 원컵 솔루션</h3>
                                 <p class="slider-desc">칼로리 부담 없이 즉시 제공 가능한 데일리 음료 베이스</p>
                             </div>
                             <div class="slider-arrow">
