## <base href="https://doodleb75.github.io/emart/">  적용

--- a/mobile/pages/approval-request-confirm.html
+++ b/mobile/pages/approval-request-confirm.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <base href="https://doodleb75.github.io/emart/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>승인요청 확정 - 이마트 에브리데이</title>
     <!-- CSS 로드 (CSS load) -->
