--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <base href="https://doodleb75.github.io/emart/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>마이페이지 - e-Club</title>
 
