--- a/pages/search_result.html
+++ b/pages/search_result.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <base href="https://doodleb75.github.io/emart/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>검색결과 - e-Club</title>
 
