### 2026-01-14 오전 ### 1. 이미지 onerror 처리. 2. 모달 경고 해결 (bootstrap - trigger위치 ) 3. 모달 나올 때, sticky 영역 해제 에러 해결 4. base href 일단 삭제.

--- a/mobile/pages/approval-request.html
+++ b/mobile/pages/approval-request.html
@@ -3,11 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <base href="https://doodleb75.github.io/emart/"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>승인요청 - 이마트 에브리데이</title>
     <!-- CSS 로드 (CSS load) -->
-    <link rel="stylesheet" href="../../assets/styles/mobile.css">
+    <link rel="stylesheet" href="/assets/styles/mobile.css">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <link rel="stylesheet" as="style" crossorigin
