--- a/pages/cart.html
+++ b/pages/cart.html
@@ -129,7 +129,7 @@
 
                             <div class="item-image">
                                 <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
-                                    onerror="this.src='https://via.placeholder.com/150x150?text=Evian'">
+                                    onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%97%90%EB%B9%84%EC%95%99%20500ml'">
                             </div>
 
                             <div class="item-info">
@@ -255,7 +255,7 @@
 
                             <div class="item-image">
                                 <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
-                                    onerror="this.src='https://via.placeholder.com/150x150?text=Actz'">
+                                    onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%95%A0%EA%B2%BD%20%EC%97%91%EC%B8%A0'">
                             </div>
 
                             <div class="item-info">
@@ -366,7 +366,7 @@
 
                             <div class="item-image">
                                 <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
-                                    onerror="this.src='https://via.placeholder.com/150x150?text=Evian'">
+                                    onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%97%90%EB%B9%84%EC%95%99%20500ml'">
                             </div>
 
                             <div class="item-info">
@@ -492,7 +492,7 @@
 
                             <div class="item-image">
                                 <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
-                                    onerror="this.src='https://via.placeholder.com/150x150?text=Actz'">
+                                    onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%95%A0%EA%B2%BD%20%EC%97%91%EC%B8%A0'">
                             </div>
 
                             <div class="item-info">
@@ -614,7 +614,7 @@
 
                             <div class="item-image">
                                 <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
-                                    onerror="this.src='https://via.placeholder.com/150x150?text=Evian'">
+                                    onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%97%90%EB%B9%84%EC%95%99%20500ml'">
                             </div>
 
                             <div class="item-info">
@@ -741,7 +741,7 @@
 
                             <div class="item-image">
                                 <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
-                                    onerror="this.src='https://via.placeholder.com/150x150?text=Actz'">
+                                    onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%95%A0%EA%B2%BD%20%EC%97%91%EC%B8%A0'">
                             </div>
 
                             <div class="item-info">
@@ -862,7 +862,7 @@
 
                             <div class="item-image">
                                 <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
-                                    onerror="this.src='https://via.placeholder.com/150x150?text=Evian'">
+                                    onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%97%90%EB%B9%84%EC%95%99%20500ml'">
                             </div>
 
                             <div class="item-info">
@@ -989,7 +989,7 @@
 
                             <div class="item-image">
                                 <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
-                                    onerror="this.src='https://via.placeholder.com/150x150?text=Actz'">
+                                    onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%95%A0%EA%B2%BD%20%EC%97%91%EC%B8%A0'">
                             </div>
 
                             <div class="item-info">
@@ -1108,7 +1108,7 @@
 
                             <div class="item-image">
                                 <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
-                                    onerror="this.src='https://via.placeholder.com/150x150?text=Evian'">
+                                    onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%97%90%EB%B9%84%EC%95%99%20500ml'">
                             </div>
 
                             <div class="item-info">
@@ -1235,7 +1235,7 @@
 
                             <div class="item-image">
                                 <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
-                                    onerror="this.src='https://via.placeholder.com/150x150?text=Actz'">
+                                    onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%95%A0%EA%B2%BD%20%EC%97%91%EC%B8%A0'">
                             </div>
 
                             <div class="item-info">
